# aero-doc-skill

./: .gitignore  .npmignore  AGENT_MANUAL.md  LICENSE  README.md  package.json  pyproject.toml
.agents/skills/aero_doc/: skill.md
.agents/skills/aero_doc/resources/: AGENT_MANUAL_TEMPLATE.md  README_TEMPLATE.md
.agents/skills/aero_doc/scripts/: aero_doc.py
.github/workflows/: workflow.yml
aero_doc/: __init__.py  cli.py
aero_doc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
aero_doc/skill_data/: skill.md
aero_doc/skill_data/scripts/: aero_doc.py
